--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
 <h1>Hello!</h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBUX2C6HYNIxEfdp3xVnn3XXCUEhj9Gu_Q",
+  authDomain: "sweet-caroline-403.firebaseapp.com",
+  databaseURL: "https://sweet-caroline-403-default-rtdb.firebaseio.com",
+  projectId: "sweet-caroline-403",
+  storageBucket: "sweet-caroline-403.appspot.com",
+  messagingSenderId: "184140801987",
+  appId: "1:184140801987:web:02faf3d6f570eb73203f76",
+  measurementId: "G-V6N0VDSGGJ"
+};
